# mlops-eep

./: Datasets.md  README.md  pyproject.toml
examples/: ancestor_choice.py  gpytorch_example.py  kernel_regression.py  logistic_regr.py  prediction.py  pytorch_example.py  report.py  suggestions.py
src/eep/: __init__.py  experiment.py  parameter_handling.py  plot.py  report.py
src/eep/docs/: generate_doc.sh
src/eep/docs/source/: conf.py  index.rst
src/eep/engineer/: __init__.py  suggestions.py
src/eep/generate/: __init__.py  ancestor.py  base.py  deepscan.py  exhaustive.py  fixed.py  mutationcombiner.py  random.py
src/eep/models/: __init__.py  base.py  gpytorch_kernels.py  gpytorch_models.py  kernel_regression_pytorch.py  logistic_regr.py  pretrained.py  pytorch_models.py  unirep_based.py  utils.py
src/eep/models/config/: __init__.py  pretrained_models.py
src/eep/policies/: __init__.py  allcandidates.py  base.py  bthompson.py  bucb.py  indep_ucb.py  random.py
src/eep/util/: __init__.py  artif_fitness.py  cross_validation.py  typing.py
test/: _doctests.py  conftest.py  run  test_engineer.py  test_generate.py  test_gpytorch_kernel.py  test_gpytorch_models.py  test_kernel_regression_pytorch.py  test_logistic_regr.py  test_pytorch_model.py  test_report.py
